Java 25 Ignite2 테스트 옵션 계약을 문서화한다
Ignite 2 thin-client가 Java 25+에서 사용하는 최소 JVM 옵션과 모듈 범위를 README에 명시해 실행 설정과 사용자 계약의 드리프트를 막는다.

Constraint: 옵션은 java.nio와 java.util 두 모듈만 열고 testcontainers Test 태스크에 한정한다.
Rejected: 저장소 전역 JVM 옵션 문서화 | unrelated 테스트의 reflection 문제를 가릴 수 있다.
Confidence: high
Scope-risk: narrow
Directive: Ignite 의존성 또는 Java baseline을 바꿀 때 이 두 옵션의 실제 필요성을 다시 검증한다.
Tested: git diff --check; Python contract tests; local arm64 strict gate 1/1
Not-tested: GitHub-hosted ubuntu-24.04-arm CI 실행